started with alpine

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,9 +1,9 @@
-version: '2'
+version: '3'
 services:
   mariadb:
     image: "mariadb"
     environment:
-      - MYSQL_ROOT_PASSWORD=123
+      - MYSQL_ROOT_PASSWORD=frappe
       - MYSQL_USER=root
     volumes:
       - ./conf/mariadb-conf.d:/etc/mysql/conf.d
@@ -13,32 +13,23 @@ services:
 
   redis-cache:
     image: redis:alpine
-
     volumes:
       - ./redis-conf/redis_cache.conf:/etc/conf.d/redis.conf
-
     command: ["redis-server","/etc/conf.d/redis.conf"]
-
     container_name: redis-cache
 
   redis-queue:
     image: redis:alpine
-
     volumes:
       - ./redis-conf/redis_queue.conf:/etc/conf.d/redis.conf
-
     command: ["redis-server","/etc/conf.d/redis.conf"]
-
     container_name: redis-queue
 
   redis-socketio:
     image: redis:alpine
-
     volumes:
       - ./redis-conf/redis_socketio.conf:/etc/conf.d/redis.conf
-
     command: ["redis-server","/etc/conf.d/redis.conf"]
-
     container_name: redis-socketio
 
   frappe:
